[0.0.8] Fix tests and finalise z-index system

--- a/example/screen.scss
+++ b/example/screen.scss
@@ -122,14 +122,14 @@ body {
 
     &.se-resize {
       right: 0;
-      cursor: nwse-resize;
+      cursor: se-resize;
       width: 10px;
       height: 10px;
     }
 
     &.sw-resize {
       left: 0;
-      cursor: nesw-resize;
+      cursor: sw-resize;
       width: 10px;
       height: 10px;
     }
